@@ -1,9 +1,11 @@
 package fr.cotedazur.univ.polytech.startingpoint;
 
-import java.util.ArrayList;
+
+import java.security.NoSuchAlgorithmException;
+import java.security.SecureRandom;
 import java.util.List;
 import java.util.Random;
-import java.util.stream.Collectors;
+
 
 public class CerveauParcelle extends Cerveau {
 
@@ -25,9 +27,21 @@ public class CerveauParcelle extends Cerveau {
         return placerUneParcelleRandom(jeu,derniere);
     }
 
+
+
+
+    private Random ran;
+
+    {
+        try {
+            ran = SecureRandom.getInstanceStrong();
+        } catch (NoSuchAlgorithmException e) {
+            throw new RuntimeException(e);
+        }
+    }
+
     private  Action placerUneParcelleRandom(Jeu jeu,Action derniere) {
         List<Position> listPlacement = jeu.getPlacementsPossibles();
-        Random ran=new Random();
         int i= ran.nextInt(listPlacement.size());
         Action action= new ActionParcelle(new Parcelle(listPlacement.get(i)));
         if(this.retournerAction(action, derniere)!=null) return action;
@@ -40,7 +54,7 @@ public class CerveauParcelle extends Cerveau {
         return null;
     }
     private Action mangerUnBambou(Jeu jeu,Action derniere){
-        List <Parcelle>parcellesAvec=Parcelle.getParcellesAvec(jeu.getParcellesPlacees(),new Bambou(1));;
+        List <Parcelle>parcellesAvec=Parcelle.getParcellesAvec(jeu.getParcellesPlacees(),new Bambou(1));
         parcellesAvec=jeu.getPanda().deplacementsPossibles(parcellesAvec);
         if(!parcellesAvec.isEmpty()) {
             Action action = new ActionPanda(parcellesAvec.get(0));
@@ -51,11 +65,11 @@ public class CerveauParcelle extends Cerveau {
 
     private ActionParcelle placerUneParcelle(Jeu jeu, Action derniere) {
         List<Objectif> listObjectif = joueur.getCartesObjectifs();
-        listObjectif= listObjectif.stream().filter(o->o.getType().equals(Type.TypeParcelle.getNomType())).collect(Collectors.toList());
+        listObjectif= listObjectif.stream().filter(o->o.getType().equals(Type.TYPE_PARCELLE.getNomType())).toList();
         for (Objectif objectif: listObjectif
              ) {
             if(!objectif.estValide(jeu.getParcellesPlacees(),joueur)){
-                ObjectifVerifier objectifVerifier=objectif.verifierValider(jeu.getParcellesPlacees());
+                ObjectifVerifierParcelle objectifVerifier= (ObjectifVerifierParcelle) objectif.verifierValider(jeu.getParcellesPlacees());
                 if(objectifVerifier.getMoinsManquants().isEmpty()) break;
                 Position nouvellePos=objectifVerifier.getMoinsManquants().get(0);
                 return new ActionParcelle((new Parcelle(nouvellePos)));
@@ -67,7 +81,7 @@ public class CerveauParcelle extends Cerveau {
 
     private  ActionPiocher piocherUneCarte(Jeu jeu, Action derniere) {
         List<Objectif> listObjectif = joueur.getCartesObjectifs();
-        listObjectif= listObjectif.stream().filter(o->o.getType().equals(Type.TypeParcelle.getNomType())).collect(Collectors.toList());
+        listObjectif= listObjectif.stream().filter(o->o.getType().equals(Type.TYPE_PARCELLE.getNomType())).toList();
         if (listObjectif.isEmpty()){
             List<ObjectifParcelle> op = jeu.getObjectifsParcelles();
             Objectif newObjectif = op.get(op.size()-1);
